--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,5 @@
-Test App contents...!!
+# Ruby on Rails Tutorial: first application
+
+This is the first application for
+[*Ruby on Rails Tutorial: Learn Rails by Example*](http://railstutorial.org/)
+by [Michael Hartl](http://michaelhartl.com/).
